syntax = "proto3";

package user.v1;
option go_package = "github.com/DENFNC/Zappy/user_service/proto/gen/v1;v1";

import "validate/validate.proto";

message PaymentInput {
  string profile_id    = 1 [(validate.rules).string = {len: 36}];
  string payment_token = 2 [(validate.rules).string = {min_len: 1, max_len: 255}];
}

message Payment {
  string payment_id    = 1 [(validate.rules).string = {len: 36}];
  string profile_id    = 2 [(validate.rules).string = {len: 36}];
  string payment_token = 3;
  bool   is_default    = 4;
}

message ResourceID {
  string id = 1 [(validate.rules).string = {len: 36}];
}

message UpdatePaymentRequest {
  string payment_id = 1 [(validate.rules).string = {len: 36}];
  PaymentInput payment = 2;
}

message ResourceByIDRequest {
  string id = 1 [(validate.rules).string = {len: 36}];
}

message ListByProfileRequest {
  string profile_id = 1 [(validate.rules).string = {len: 36}];
}

message ListPaymentResponse {
  repeated Payment payments = 1;
}

message SetDefaultPaymentRequest {
  string payment_id  = 1 [(validate.rules).string = {len: 36}];
  string profile_id  = 2 [(validate.rules).string = {len: 36}];
}

service PaymentService {
  rpc CreatePayment(PaymentInput)         returns (ResourceID);
  rpc GetPayment(ResourceByIDRequest)     returns (Payment);
  rpc DeletePayment(ResourceByIDRequest)  returns (ResourceID);
  rpc UpdatePayment(UpdatePaymentRequest) returns (ResourceID);
  rpc ListPayments(ListByProfileRequest)  returns (ListPaymentResponse);
  rpc SetDefaultPayment(SetDefaultPaymentRequest) returns (ResourceID);
}